# kt-defaults

./: .gitignore  README.md  kohaku.yaml  pyproject.toml
creatures/creative/: config.yaml
creatures/diagrammer/: config.yaml
creatures/diagrammer/prompts/: system.md
creatures/general/: config.yaml
creatures/music/: config.yaml
creatures/music/prompts/: system.md
creatures/ops/: config.yaml
creatures/researcher/: config.yaml
creatures/reviewer/: config.yaml
creatures/root/: config.yaml
creatures/swe/: config.yaml
creatures/video/: config.yaml
creatures/video/prompts/: system.md
kt_biome/: __init__.py
kt_biome/io/: discord.py  telegram_input.py
kt_biome/lib/: rag_reader.py
kt_biome/plugins/: checkpoint.py  circuit_breaker.py  context_files.py  cost_tracker.py  event_logger.py  injection_scanner.py  multimodal_guard.py  otel_metrics.py  rag_reader.py  seamless_memory.py
kt_biome/tools/: database.py  skill_manage.py
kt_biome/triggers/: cron.py  webhook.py
kt_defaults/: __init__.py  cost_tracker.py  event_logger.py
kt_defaults/io/: discord.py
kt_defaults/plugins/: cost_tracker.py  event_logger.py  multimodal_guard.py
kt_defaults/tools/: database.py
kt_defaults/triggers/: webhook.py
terrariums/auto_research/: terrarium.yaml
terrariums/deep_research/: terrarium.yaml
terrariums/swe_team/: terrarium.yaml
tests/unit/: test_checkpoint_plugin.py  test_circuit_breaker_plugin.py  test_cron_trigger.py  test_injection_scanner_plugin.py  test_otel_metrics_plugin.py
